Thu Jun 20 22:02:46 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_unpack_internal): Return -2 when negative overflow.
	  (bary_unpack): Set the overflowed bit if an extra BDIGIT exists.
	  (rb_integer_unpack): Set the overflowed bit.

Thu Jun 20 21:17:19 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rgengc_rememberset_mark): record
	  (1) normal objects count in remember set
	  (2) shady objects count in remember set
	  each GC timing.

	* gc.c (gc_profile_record_get): enable to access above information
	  and REMOVING_OBJECTS, EMPTY_OBJECTS.

Thu Jun 20 18:29:26 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/gcbench.rb: Do not use GC::Profiler::disable because
	  GC::Profiler::disable prohibit to access profiling data. It should
	  be spec bug.

	  Skip GC::Profiler::report if RUBY_VERSION < '2.0.0'

Thu Jun 20 17:59:08 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/gcbench.rb: stop GC::Profiler before output results.
	  Generating GC::Profiler result under profiling causes infinite loop.

Thu Jun 20 17:24:24 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/gcbench.rb: don't use __dir__ to make compatible
	  with ruby 1.9.3.

Thu Jun 20 16:57:19 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_app_aobench.rb: use attr_accessor/reader instead of
	  defining methods.

Thu Jun 20 16:46:46 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_app_aobench.rb: added.

	* benchmark/gc/aobench.rb: added.

Thu Jun 20 16:28:33 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_so_binary_trees.rb: disable `puts' method
	  and change iteration parameter to increase execution time.

	* benchmark/gc/binarytree.rb: added.

Thu Jun 20 16:06:37 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/pentomino.rb: added.
	  Simply load pentomino puzzle in the benchmark/ directory.

Thu Jun 20 15:32:56 2013  Koichi Sasada  <ko1@atdot.net>

	* benchmark/gc/redblack.rb: import red black tree benchmark from